-

    New feature: Really long URLs in the text that extend beyond the
    box it's in is truncated shorter.

    Bug fixed: Having statuses containing unicode characters could
    break the statistics page. Thanks Rene Bonvin. (Real#0735)

    New feature: Basic statistics is not private by default from now
    on. You can still make it private from the Advanced Properties page.
    
    New feature: Statuses can now be configured to contain unicode
    characters. 
    
    New feature: The persistent list of saved filters is now indexed
    with a separate ZCatalog to vastly speed up lookups of old saved
    filters.
    
    Bug fixed: Saved filters containing unicode characters could cause
    a UnicodeDecodeError.    

    Bug fixed: Unicode characters in a filtered name would show
    incorrectly when loading the filter options.

    Bug fixed: Search on title with wildcards (e.g. *keyword* matching
    'subkeywords') only if no other title searches matched.

    Bug fixed: Emails with tabs in header values were before
    incorrectly stripped of this whitespace causing the set of headers
    to be shortened. Thanks Jesse Perry

    Bug fixed: getIssueObjects() would break with KeyError if a
    reference to a join-in issuetracker (see bottom of Advanced 
    properties) is broken.

    Bug fixed: Reassigned issues didn't say "assigned" on the List
    Issues. Thanks NiBar (Real#0711)

    New feature: Added new method called getReportIssues() that takes
    the id of the report as an only parameter and it returns all the 
    issues that report would find.

    New feature: Search result highlighting can be switched off with a
    Javascript-created link similar to Gmail.

    Bug fixed: Encoded email address in a autorefresh are re-encoded.

    Bug fixed: Possible UnicodeDecodeError if using normal acl_users
    user folder with a unicode fromname.

    New feature: File attachments initially hidden and covered with a
    Javascript opener.
