@@ -156,6 +156,11 @@ function hideAssignmentForm() {
    $('#assignee').css('color','#666');
 }
 
+function closeAnnouncement() {
+   $('table.announcement').hide();
+   return false;
+}
+
 /* FEATURE ON HOLD
 // If the AJAX doesn't work for some reason, pause the autorefresh for a
 // very long time and show a little notice message. 
@@ -165,3 +170,4 @@ $(document).ajaxError(function(event, request, settings){
    showAJAXProblemWarning(settings.url);
 });
  */
+
